--- a/blog/src/style.scss
+++ b/blog/src/style.scss
@@ -71,6 +71,7 @@ nav {
                 word-break: break-word;
             }
             &-text {
+                transition: 0.2s all;
                 @extend .article-title;
                 font-size: 20px;
             }
