--- a/gobang/src/style.scss
+++ b/gobang/src/style.scss
@@ -1,4 +1,18 @@
+body {
+    margin: 0px;
+    padding: 0px;
+    background-color: black;
+    height: 768px;
+}
 
+.banner {
+    padding: 50px;
+    font-size:40px;
+    font-family: monospace;
+    font-weight: bolder;
+    text-align: center;
+    color:wheat;
+}
 
 .board {
     margin: 0 auto;
@@ -9,7 +23,7 @@
     justify-content: start;
     align-content: flex-start;
     border: 3px solid black;
-    background-color: aquamarine;
+    background-color: black;
     box-sizing: content-box;
 }
 
@@ -27,7 +41,7 @@
     width: 30px;
     height: 1px;
     margin-top: -0.5px;
-    background-color: black;
+    background-color: green;
 }
 
 .y-line {
@@ -36,7 +50,7 @@
     width: 1px;
     height: 30px;
     margin-left: -0.5px;
-    background-color: black;  
+    background-color: green;  
 }
 
 .piece-preview {
@@ -49,29 +63,12 @@
     border-radius: 50%;
     margin-left: -9px;
     margin-top: -9px;
-    transition: 0.2s all;
     z-index: 1;
 }
 
-/*
-.red {
-    position: absolute;
-    background-color: red;
-    top:50%;
-    left: 50%;
-    height: 15px;
-    width: 15px;
-    border: 1px solid black;
-    border-radius: 50%;
-    margin-left: -8.5px;
-    margin-top: -8.5px;
-    z-index: 2;
-}
-*/
-
 .piece-preview:hover {
     display: inline;
-    background-color: rgba(136, 40, 226, 0.3)
+    background-color: rgba(223, 29, 29, 0.3)
 }
 
 
@@ -82,7 +79,7 @@
     left: 50%;
     height: 15px;
     width: 15px;
-    border: 1px solid black;
+    border: 1px solid white;
     border-radius: 50%;
     margin-left: -8.5px;
     margin-top: -8.5px;
